[package]
name = "christmas-lights"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
angular-units = "0.2.4"
async-mutex = "1.4.0"
async-trait = "0.1.59"
btleplug = "0.10.4"
chrono = "0.4.23"
clokwerk = "0.4.0"
log = "0.4.17"
prisma = "0.1.1"
sunrise = "1.0.0"
systemd-journal-logger = "0.6.0"
tokio = { version = "1.23.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
] }
uuid = "1.2.2"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
